07_USART_with_spark/build/gnatprove/blink.adb.stderr

[01m[Kblink.ads:7:09: [m[K[01;31m[Kerror: [m[Ktasking in SPARK requires sequential elaboration (SPARK RM 9(2))
    7 |   task [01;31m[Kblinking_leds[m[K is
      |        [01;31m[K^~~~~~~~~~~~~[m[K
  violation of aspect SPARK_Mode at line 4
    4 |   with spark_mode => on
      |        [01;36m[K^ here[m[K
